# AsciiOpengl-Rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
assets/shaders/: fragment_shader.glsl
examples/: basic_example.rs  mod.rs
examples/basic_example_res/: game_init.rs  game_loop.rs  mod.rs
examples/basic_example_res/assets/models/: Cube.mtl
examples/basic_example_res/assets/scenes/: scene1.json
src/: lib.rs  main.rs
src/engine/: ascii_render.rs  camera.rs  core.rs  game_init.rs  game_loop.rs  matrices.rs  mod.rs  object.rs  objects.rs  prefab.rs  scene.rs  ui.rs
src/engine/example/: game_init.rs  game_loop.rs  mod.rs
src/rawmodels/: teapot.rs
src/shaders/: fragment_shader.glsl  vertex_shader.glsl
