[package]
name = "ascii_opengl_rust"
authors = ["F1L1Pv2 <filipscave@gmail.com>", "Alan Klas <github@alanklas.com>"]
version = "0.1.0"
edition = "2021"
description = "Ascii Game Engine written in Rust using OpenGL."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "dylib"]
path = "src/lib.rs"

[[example]]
name = "basic_example"
path = "examples/basic_example.rs"

[dependencies]
glium = "0.32.1"
image = "0.24.6"
terminal_size = "0.2.6"
device_query = "1.1.3"
tobj = "4.0.0"
fontdue = "0.7.3"
serde_json = "1.0.96"
